<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:fillViewport="true">

    <!--Main RelativeLayout-->
    <RelativeLayout
        android:id="@+id/sc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/mainRelative_colorGrey">

        <!-- Main LinearLayout -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/mainLinear_marginTop"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="@string/let_s_begin"
                android:textStyle="bold"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:textSize="@dimen/hintTxt_size"
                android:text="@string/hint_scroll_down"
                android:layout_marginBottom="@dimen/hintTxt_marginBottom"/>

            <!-- Beginning of Question 1 Card View -->
            <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
                android:id="@+id/question_1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/question1_cardView_style"
                app:cardBackgroundColor="@android:color/white"
                card_view:cardCornerRadius="@dimen/cardView_cornerRadius">

                <!--Parent layout of question text-->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/img1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:adjustViewBounds="true"
                        android:scaleType="centerCrop"
                        android:src="@drawable/jollof" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/question_1"
                        android:textStyle="bold"
                        android:layout_marginLeft="@dimen/questions_marginLeft"/>

                    <!--Parent layout of question text-->
                    <RadioGroup
                        android:id="@+id/questionOneRadioGroup"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:layout_marginBottom="@dimen/activity_vertical_margin">

                        <RadioButton
                            android:id="@+id/yellowRiceOneRadioButton"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/yellow_rice_with_chickhen"
                            style="@style/radioButton_style"
                            android:onClick="onCheckedQuestion1"/>

                        <RadioButton
                            android:id="@+id/jollofRiceOneRadioButton"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            style="@style/radioButton_style"
                            android:text="@string/jollof_rice_with_chicken"
                            android:onClick="onCheckedQuestion1"/>

                        <RadioButton
                            android:id="@+id/wheatRiceOneRadioButton"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            style="@style/radioButton_style"
                            android:text="@string/wheat_rice_with_chicken"
                            android:onClick="onCheckedQuestion1"/>

                        <RadioButton
                            android:id="@+id/gumboOneRadioButton"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            style="@style/radioButton_style"
                            android:text="@string/gumbo_with_chicken"
                            android:onClick="onCheckedQuestion1"/>

                    </RadioGroup>

                </LinearLayout>
            </android.support.v7.widget.CardView>
            <!--End of Question 1 Card View-->

            <!-- Beginning of Question 2 Card View -->
            <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
                android:id="@+id/question_2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/question234_cardView_style"
                app:cardBackgroundColor="@android:color/white"
                card_view:cardCornerRadius="@dimen/cardView_cornerRadius">

                <!--Parent layout of question text-->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_marginBottom="@dimen/activity_vertical_margin">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/question_2_egusi_is_usually_eaten_with"
                        android:textStyle="bold"
                        android:layout_marginTop="@dimen/activity_vertical_margin"
                        android:layout_marginLeft="@dimen/questions_marginLeft"
                        android:layout_marginBottom="@dimen/questions_marginBottom" />

                    <CheckBox
                        android:id="@+id/bankuCheckBox"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        style="@style/checkbox_button_style"
                        android:text="@string/banku" />

                    <CheckBox
                        android:id="@+id/luwonboCheckBox"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        style="@style/checkbox_button_style"
                        android:text="@string/luwonbo" />

                    <CheckBox
                        android:id="@+id/irioCheckBox"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        style="@style/checkbox_button_style"
                        android:text="@string/irio" />

                    <CheckBox
                        android:id="@+id/ebaCheckBox"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        style="@style/checkbox_button_style"
                        android:text="@string/eba"
                        android:layout_marginBottom="@dimen/activity_vertical_margin"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center_horizontal"
                        android:textSize="@dimen/hintTxt_size"
                        android:text="@string/hint_you_can_select_more_than_one_option"/>
                </LinearLayout>
            </android.support.v7.widget.CardView>
            <!--End of Question 2 Card View-->

            <!-- Beginning of Question 3 Card View -->
            <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
                android:id="@+id/question_3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/question234_cardView_style"
                app:cardBackgroundColor="@android:color/white"
                card_view:cardCornerRadius="@dimen/cardView_cornerRadius">

                <!--Parent layout of question text-->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_marginBottom="@dimen/activity_vertical_margin">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/question_3_fufu_is_popular_in_which_country"
                        android:textStyle="bold"
                        android:layout_marginTop="@dimen/activity_vertical_margin"
                        android:layout_marginLeft="@dimen/questions_marginLeft"
                        android:layout_marginBottom="@dimen/activity_vertical_margin"/>

                    <CheckBox
                        android:id="@+id/nigeriaQ3CheckBox"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        style="@style/checkbox_button_style"
                        android:text="@string/nigeria"/>

                    <CheckBox
                        android:id="@+id/ghanaQ3CheckBox"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        style="@style/checkbox_button_style"
                        android:text="@string/ghana"/>

                    <CheckBox
                        android:id="@+id/tunisiaCheckBox"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        style="@style/checkbox_button_style"
                        android:text="@string/tunisia"/>

                    <CheckBox
                        android:id="@+id/wakandaCheckBox"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        style="@style/checkbox_button_style"
                        android:text="@string/wakanda"
                        android:layout_marginBottom="@dimen/activity_vertical_margin"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center_horizontal"
                        android:textSize="@dimen/hintTxt_size"
                        android:text="@string/hint_you_can_select_more_than_one_option"/>
                </LinearLayout>
            </android.support.v7.widget.CardView>
            <!-- End of Question 3 Card View -->

            <!-- Beginning of Question 4 Card View -->
            <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
                android:id="@+id/question_4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/question234_cardView_style"
                app:cardBackgroundColor="@android:color/white"
                card_view:cardCornerRadius="@dimen/cardView_cornerRadius">

                <!--Parent layout of question text-->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/question_4"
                        android:textStyle="bold"
                        android:layout_marginTop="@dimen/question4txt_marginTop"
                        android:layout_marginLeft="@dimen/questions_marginLeft"
                        android:layout_margin="@dimen/activity_margin"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center_horizontal"
                        android:text="@string/chakalaka_is_a_popular_local_food"
                        android:layout_marginTop="@dimen/question4txt_marginTop" />

                    <EditText
                        android:id="@+id/question_4EditTextID"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        style="@style/question4_editText_style"
                        android:hint="@string/which_country_is_it_found_in"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center_horizontal"
                        android:textSize="@dimen/hintTxt_size"
                        android:text="@string/hint_it_is_common_in_the_southern_part_of_africa"
                        android:layout_marginBottom="@dimen/activity_vertical_margin"/>

                </LinearLayout>
            </android.support.v7.widget.CardView>

            <!-- Beginning of Bonus Question Card View -->
            <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
                android:id="@+id/bonusQuestion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/question234_cardView_style"
                app:cardBackgroundColor="@android:color/white"
                card_view:cardCornerRadius="@dimen/cardView_cornerRadius">

                <!--Parent layout of question text-->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:padding="@dimen/linearLayout_padding">

                    <ImageView
                        android:id="@+id/item_image2"
                        android:layout_width="@dimen/imageView_layout_width"
                        android:layout_height="@dimen/imageView_layout_height"
                        android:adjustViewBounds="true"
                        android:src="@drawable/jollof"/>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:layout_gravity="center_vertical">

                        <TextView
                            android:id="@+id/item_questionNumber2"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/bonus_question"
                            android:textSize="@dimen/bonusQuestion_textSize"
                            android:textStyle="bold"
                            android:layout_marginLeft="@dimen/bonusQuestion_marginLeft"/>

                        <TextView
                            android:id="@+id/item_question2"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/who_prepares_it_better"
                            android:layout_marginLeft="@dimen/bonusQuestion_marginLeft"/>

                        <LinearLayout
                            android:id="@+id/item_possibleAnswer2"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal">

                            <CheckBox
                                android:id="@+id/nigeriaCheckBox"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/nigeria"/>

                            <CheckBox
                                android:id="@+id/ghanaCheckBox"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/ghana"/>
                        </LinearLayout>

                    </LinearLayout>

                </LinearLayout>
            </android.support.v7.widget.CardView>
            <!--End of Bonus Question Card View-->

            <!-- Beginning Of User's Details -->
            <RelativeLayout
                android:id="@+id/details_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/userName_rLayout_style">

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/name_textInputLayout"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="@dimen/activity_margin">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/name_textInputEditText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="text"
                        android:hint="@string/enter_your_name_here" />
                </android.support.design.widget.TextInputLayout>

                <Button
                    android:id="@+id/submitResults"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/name_textInputLayout"
                    style="@style/submitButton_style"
                    android:onClick="submitResults" />

                <Button
                    android:id="@+id/tryAgain"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/name_textInputLayout"
                    style="@style/tryAgainButton_style"
                    android:onClick="tryAgain" />
            </RelativeLayout>
            <!-- End Of User's Details -->

        </LinearLayout>
    </RelativeLayout>
</ScrollView>